// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`get > should get followers 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": 1658142804,
      "description": "",
      "grade": 1,
      "user": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "joinedAt": 0,
        "nickname": "nickname 287622",
        "sign": "sing 287622",
        "username": "287622",
      },
    },
  ],
  "total": 1,
}
`;

exports[`get > should get friends 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": 1658142804,
      "description": "",
      "grade": 1,
      "user": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 427613,
        "joinedAt": 0,
        "nickname": "nickname 427613",
        "sign": "sing 427613",
        "username": "427613",
      },
    },
  ],
  "total": 1,
}
`;
